# vermintwitch

./: Cargo.toml  README.md  build.rs
src/: app.rs  cert.rs  irc_server.rs  main.rs  tcp_server.rs  ui.rs
ui/: main.slint
