[package]
name = "vermintwitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
anyhow = "1.0.80"
crossbeam-channel = "0.5.12"
slint = "1.4.1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[build-dependencies]
winres = "0.1"
slint-build = "1.4.1"

[profile.release]
opt-level = "z"

