[package]
name = "vermintwitch"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
anyhow = "1.0.80"
slint = "1.4.1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
lazy_static = "1.4.0"

[build-dependencies]
winres = "0.1"
slint-build = "1.4.1"

[profile.release]
opt-level = "z"

